--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "displayName": "CodeCloak",
   "version": "0.1.0",
   "description": "Transform selected code for safe sharing with AI assistants",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rafaelsart/code-cloak.git"
+  },
   "engines": {
-    "vscode": "^1.74.0"
+    "vscode": "^1.74.0",
+    "node": ">=20.0.0"
   },
   "main": "./out/extension.js",
   "activationEvents": [],
